# mochimochi

./: .gitignore  CLAUDE.md  README.md  TODO.txt  main.py  pyproject.toml  test_main.py
tests/: __init__.py  test_main.py
