[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mochi-mochi"
version = "0.1.0"
description = "CLI tool for managing Mochi flashcards with local-first sync"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "tsilva"}
]
keywords = ["mochi", "flashcards", "spaced-repetition", "cli", "markdown", "ai-grading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Education",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/tsilva/mochi-mochi"
Repository = "https://github.com/tsilva/mochi-mochi"
Issues = "https://github.com/tsilva/mochi-mochi/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
mochi-mochi = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (require live API)",
]

